<resources>
    <string name="app_name">MVVM</string>

    <!--首页-->
    <string name="description">description</string>
    <string name="Home">首页</string>
    <string name="Play">玩Android</string>
    <string name="Square">广场</string>
    <string name="System">体系</string>
    <string name="Project">项目</string>

<!--    登录页-->
    <string name="loginTitle">请使用WanAndroid账号登录!</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
</resources>