<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/themeColor">

        <include
            android:id="@+id/toolbar_login"
            layout="@layout/toolbar_custom" />

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/loginTitle"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_login" />

        <ImageView
            android:id="@+id/iv_login_username"
            android:layout_width="25dp"
            android:layout_height="18dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:src="@mipmap/icon_username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

        <TextView
            android:id="@+id/tv_login_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_login_username"
            app:layout_constraintLeft_toRightOf="@id/iv_login_username"
            app:layout_constraintTop_toTopOf="@id/iv_login_username" />

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_bg_input"
            android:hint="请输入账号"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_username" />


        <ImageView
            android:id="@+id/iv_login_password"
            android:layout_width="25dp"
            android:layout_height="18dp"
            android:layout_marginTop="30dp"
            android:src="@mipmap/icon_password"
            app:layout_constraintLeft_toLeftOf="@id/iv_login_username"
            app:layout_constraintTop_toBottomOf="@id/et_login_username" />


        <TextView
            android:id="@+id/tv_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_login_password"
            app:layout_constraintLeft_toRightOf="@id/iv_login_password"
            app:layout_constraintTop_toTopOf="@id/iv_login_password" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_bg_input"
            android:hint="请输入密码"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_password" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="260dp"
            android:layout_height="45dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/shape_bg_button_white"
            android:text="@string/login"
            android:textColor="@color/themeColor"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_login_password" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="260dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_bg_button_white"
            android:text="@string/register"
            android:textColor="@color/themeColor"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_login" />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi_login"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:indicatorColor="@color/white"
            app:indicatorName="LineScalePulseOutRapidIndicator"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>